# pagerduty-alerts

./: .gitignore  .python-version  .railwayignore  Dockerfile  LICENSE  README.md  config.example.yaml  config.yaml  nixpacks.toml  railway.json
.github/workflows/: watchdog.yml
python/: near_pagerduty_bridge.py  requirements.txt
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
