[package]
name = "near-pagerduty-alerts"
version = "0.1.0"
edition = "2021"
description = "NEAR Blockchain Event to PagerDuty Alert Bridge"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"
serde_yaml = "0.9"

[[bin]]
name = "near-pagerduty-monitor"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
